tests/fixtures/invalid/parse_errors/invalid_operator.luma
-- Invalid operator usage
let x = 5 ++ 3
